@@ -36,7 +36,6 @@ $GLOBALS['TL_LANG']['tl_iso_payment_modules']['note']						= array('Payment Note
 $GLOBALS['TL_LANG']['tl_iso_payment_modules']['price']						= array('Price', '');
 $GLOBALS['TL_LANG']['tl_iso_payment_modules']['tax_class']					= array('Tax Class', '');
 $GLOBALS['TL_LANG']['tl_iso_payment_modules']['new_order_status']			= array('Status for new orders', 'Choose a matching status for new orders.');
-$GLOBALS['TL_LANG']['tl_iso_payment_modules']['postsale_mail']				= array('Email Template for status changes', 'Select an email template to notify store administrator on payment status changes.');
 $GLOBALS['TL_LANG']['tl_iso_payment_modules']['minimum_total']				= array('Minimum total', 'Enter a number greater zero to exclude this payment method for lower priced orders.');
 $GLOBALS['TL_LANG']['tl_iso_payment_modules']['maximum_total']				= array('Maximum total', 'Enter a number greater zero to exclude this payment method for higher priced orders.');
 $GLOBALS['TL_LANG']['tl_iso_payment_modules']['countries']					= array('Available countries', 'Select the countries where this payment method may be used (customer\'s billing address).');
@@ -49,6 +48,9 @@ $GLOBALS['TL_LANG']['tl_iso_payment_modules']['payflowpro_vendor']			= array('Pa
 $GLOBALS['TL_LANG']['tl_iso_payment_modules']['payflowpro_partner']			= array('Paypal Payflow Pro partner', 'Case-sensitive!  Usual partner Ids are either "PayPal" or "PayPalUK".');
 $GLOBALS['TL_LANG']['tl_iso_payment_modules']['payflowpro_password']		= array('Paypal Payflow Pro api password', 'An alphanumeric string of about 11 characters');
 $GLOBALS['TL_LANG']['tl_iso_payment_modules']['payflowpro_transType']		= array('Paypal Payflow Pro transaction type', 'Please select a transaction type.');
+$GLOBALS['TL_LANG']['tl_iso_payment_modules']['postfinance_pspid']			= array('Postfinance PSPID', 'The PSPID is your unique identification for the Postfinance system.');
+$GLOBALS['TL_LANG']['tl_iso_payment_modules']['postfinance_secret']			= array('Postfinance SHA-1-IN signature', 'This will be used to validate the server communication.');
+$GLOBALS['TL_LANG']['tl_iso_payment_modules']['postfinance_method']			= array('Postfinance method', 'Type of data transfer from postfinance.');
 $GLOBALS['TL_LANG']['tl_iso_payment_modules']['epay_merchantnumber']		= array('Merchant number', 'The unique merchant number created in ePay. This merchant number is to be found in your contract with PBS.');
 $GLOBALS['TL_LANG']['tl_iso_payment_modules']['epay_secretkey']				= array('Secret key', 'The secret key set up in your ePay configuration.');
 $GLOBALS['TL_LANG']['tl_iso_payment_modules']['button']						= array('Checkout button', 'You can show a custom checkout button instead of the default one.');
